# DFTP-MCP

./: COMPLETE_ARCHITECTURE.md  Dockerfile.backend  FRAUD_SERVICE_DEBUG.md  Jenkinsfile  README.md  SYSTEM_ARCHITECTURE.md  app.py  build-and-push.ps1  clean-start.bat  config.json  debug-start-all.bat  debug-test-trades.bat  deploy-keycloak-theme.ps1  docker-compose.yml  function_analysis.md  handle_general_function.py  invoke_mcp_function.py  langgraph.json  main.py  main_mode.py  pyproject.toml  quick-test-trade.bat  rebuild-all.ps1  reset-activemq.bat  servers.json  start-all-services.bat  stop-all.bat
Agent1/agent1/: TradeGeneralAgent.py  __init__.py
Agent2/: test_input.txt
Agent2/agent2/: TradeSimulateSpecific.py  __init__.py  mcpserver.py
Auth_gateway/: Dockerfile.k8s  auth_service.py  nginx.conf  nginx.k8s.conf  realm.json
Auth_gateway/lua/: auth.lua
Authorization_Agent/: agents.py  app.py  auth_service.py  build.py  chatapp.py  login.py  main.py  main1.py  result.py  schema.py  session.json  style.css
Backend/Integration-Final/: PROJECT_OVERVIEW.md
DFTP-MCP-development/MCP/: .gitignore  package-lock.json  run_api.py
DFTP-MCP-development/MCP/supervisor_agent/: api.py  main.py  pyproject.toml  streamlit_app.py
DFTP-MCP-development/MCP/supervisor_agent/files/: Orderfile7.txt
Integration-Final/Status-tracking-MS-master/: Dockerfile  docker-compose.yml
Integration-Final/Trade-Simulator-main/: pom.xml
MCP/: .env  session.json
MCP/Auth_gateway/: Dockerfile
MCP/Authorization_Agent/: agents.py  auth_service.py  main.py  requirements.txt  result.py  session.json  wrapper.py
MCP/Order_Details_Agent/: pyproject.toml
MCP/Order_Details_Agent/agent1/: TradeGeneralAgent.py  __init__.py  mcpserver.py
MCP/Order_Ingestion_Agent/: pyproject.toml
MCP/Position_Agent/: pyproject.toml
MCP/Position_Agent/src/position/: __init__.py  main.py  server.py
MCP/supervisor_agent/: README.md  debug_position.py  main.py  pyproject.toml  session.json  streamlit_app.py  style.css  supervisor_config.yaml  test_integrity.py
MCP/supervisor_agent/.streamlit/: config.toml
MCP/supervisor_agent/files/: order-details.json  snow.txt
MCPAgent/: .gitignore  Dockerfile  agent_graph.py  config.json  main.py  pyproject.toml  workflow_core.py
Streamlit-UI/: chatapp.py  config.toml  style.css
ack-service/: .project  pom.xml
ansible/: deploy-k8s-addons.yml
backend/src/: app_server.py
backup/: main_mode.py  main_with_langchain.py
fraud-service/: pom.xml
frontend/: Dockerfile  angular.json  nginx.conf
frontend/src/: main.ts  styles.scss
k8s/: auth-gateway.yaml  auth-service.yaml  backend.yaml  frontend.yaml  ingress.yaml  keycloak-configmap.yaml  keycloak.yaml  namespace.yaml  postgres.yaml
mcp/: .env  list_tables.sql  package-lock.json  package.json  server.ts  taskProvider.js
position/: test.py
rule-service/: pom.xml
src/: app_server.py
src/agent/: graph.py  tool_authz.py
src/agent/mcp/: server.py  (+1 more)
src/nav_agent/: graph.py
src/order_agent/: graph.py
src/recon_agent/: graph.py
src/router_agent/: graph.py
src/uploads/: aj-2.txt
supervisor_agent/: main.py  pyproject.toml  supervisor_config.yaml
terraform/: .terraform.lock.hcl  backend-iam.tf  data.tf  ecr.tf  eks.tf  ingress.tf  jenkins-ec2.tf  jenkins-iam.tf  main.tf  rds.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  vpc.tf
trade-capture/: .project  pom.xml
uploads/: www.1TamilMV.kiwi - Michael Madana Kama Rajan (1990) Remastered TRUE WEB-DL - 1080p HQ - AVC - [Tam + Mal] - (DD5.1 - 448Kbps & AAC 2.0) - 5GB - ESub.mkv.torrent
(+199 files in other folders)
