[project]
name = "supervisor-agent"
version = "0.1.0"
description = "Configuration-driven supervisor agent for coordinating specialized workers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.13.3",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain[aws]>=1.1.3",
    "langgraph>=1.0.4",
    "langsmith>=0.4.56",
    "pyyaml>=6.0",
]
